Fix image height issue on safari

--- a/src/MainScreen/MainContents/Brick.module.css
+++ b/src/MainScreen/MainContents/Brick.module.css
@@ -73,6 +73,7 @@
 
 .SidePhoto img {
   width: 100%;
+  height: 100%;
 }
 
 .SidePhoto img:hover {
